@@ -1,5 +1,4 @@
 import sbt.Keys._
-import sbtcrossproject.CrossPlugin.autoImport.{CrossType, crossProject}
 
 name := "pwa.pool"
 
@@ -15,7 +14,6 @@ lazy val commonSettings = Defaults.coreDefaultSettings ++ Seq(
   organization := "objektwerks",
   version := "0.1-SNAPSHOT",
   scalaVersion := "2.12.11",
-  scalacOptions in (Compile, compile) ++= Seq("--illegal-access=deny")
 )
 
 lazy val tripletail = project.in(file("."))
